--- a/index.html
+++ b/index.html
@@ -133,6 +133,8 @@
                 <div class="col-xs-12 col-md-6 col-md-offset-3">
                     <h2>Music</h2>
                      <iframe style="border: 0; width: 100%; height: 307px;" src="https://bandcamp.com/EmbeddedPlayer/album=1589255531/size=large/bgcol=ffffff/linkcol=7137dc/artwork=small/transparent=true/" seamless><a href="http://missmikeymay.bandcamp.com/album/thats-that">That&#39;s That by Miss Mikey May and the Organ Grinders</a></iframe>
+                     <br>
+                     <br>
                      <iframe style="border: 0; width: 100%; height: 472px;" src="https://bandcamp.com/EmbeddedPlayer/album=1574344274/size=large/bgcol=ffffff/linkcol=7137dc/artwork=small/transparent=true/" seamless><a href="http://missmikeymay.bandcamp.com/album/stay-with-it">Stay With It by Miss Mikey May and The Organ Grinders</a></iframe>
                      <br>
                      <br>
@@ -155,7 +157,7 @@
                 <p>Mikey grew up on the stage, singing, acting, and dancing since her school years and well into her twenties. In 2012 she joined the global Swing and Blues dance communities, dancing throughout Europe and absorbing the best Swing and Blues bands from the dance floor. </p>
                 <p>In early 2016 she launched the Organ Grinders project with <a href="http://www.jankorinek.org/" target=_blank>Jan Kořínek</a>, world-class Czech Hammond organ player and band leader. In October 2016, the project released their debut album, 'Swing Out the Blues', featuring dancer-friendly swingin' Blues tributes to classic tunes.</p>
                 <p>The project's second album 'Stay With It' was released in February 2018, and features Mikey's original compositions as well as reinvented Jazz and Blues classics. The album also spans a wider musical ranges, and includes some funk and latin grooves, while still maintaining the danceable groove that you know and love. </p>
-                <p>When she is not performing with The Organ Grinders, Mikey sings regularly with the Ray Charles Tribute Orchestra led by <a href="http://jakubzomer.com/" target=_blank>Jakub Zomer</a> and with the dixieland Jazz band <a href="http://www.appendixie.cz/en/" target=_blank>AppenDixie</a> led by Petr Seghman. </p>
+                <p>When she is not performing with The Organ Grinders, Mikey sings regularly with the Ray Charles Tribute Orchestra led by <a href="http://jakubzomer.com/" target=_blank>Jakub Zomer</a> and with the traditional Jazz band <a href="http://www.appendixie.cz/en/" target=_blank>AppenDixie</a> led by Petr Seghman. </p>
             </div>
         </div>
     </section>
@@ -257,14 +259,15 @@
                 <div class="col-xs-12 col-md-8 col-md-offset-2">
                     <h2>Support</h2>
                         <p>There are plenty of ways to support independent working musicians! Even when you can't attend concerts, you can buy our music online, follow us on social media, and share your favorite tunes with your friends. </p>
-                        <p>Since most digital music platform either deduct a fee (i.e Bandcamp) or pay very little for streaming (i.e. Spotify), the best way to make sure the musicians get the maximum amount from your contributions, please use this Donate button to contribute directly:
+                        <p>Since most digital music platform either deduct a fee (i.e Bandcamp) or pay very little for streaming (i.e. Spotify), the best way to make sure the musicians get the maximum amount from your contributions, please use this Donate button to contribute directly:</p>
+                        <div>
                           <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-                            <input type="hidden" name="cmd" value="_s-xclick" />
-                            <input type="hidden" name="hosted_button_id" value="43U8ZKTFEZS6W" />
-                            <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
-                            <img alt="" border="0" src="https://www.paypal.com/en_CZ/i/scr/pixel.gif" width="1" height="1" />
+                          <input type="hidden" name="cmd" value="_s-xclick" />
+                          <input type="hidden" name="hosted_button_id" value="43U8ZKTFEZS6W" />
+                          <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+                          <img alt="" border="0" src="https://www.paypal.com/en_CZ/i/scr/pixel.gif" width="1" height="1" />
                           </form>
-                        </p>
+                        </div>
                         <p>You can use your PayPal account, or your credit card if you don't want to create a PayPal account. All transactions are secured by PayPal, similar to any other online shopping you might do with PayPal. This website is also secured with SHA-2 SSL standard and signed by Let's Encrpyt, the chosen CA for all GitHub repositories (where this website is stored and published).</p>
                   </div>
             </div>
