--- a/index.html
+++ b/index.html
@@ -261,13 +261,15 @@
                         <p>There are plenty of ways to support independent working musicians! Even when you can't attend concerts, you can buy our music online, follow us on social media, and share your favorite tunes with your friends. </p>
                         <p>Since most digital music platform either deduct a fee (i.e Bandcamp) or pay very little for streaming (i.e. Spotify), the best way to make sure the musicians get the maximum amount from your contributions, please use this Donate button to contribute directly:</p>
                         <div>
-                          <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                          <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
                           <input type="hidden" name="cmd" value="_s-xclick" />
                           <input type="hidden" name="hosted_button_id" value="43U8ZKTFEZS6W" />
                           <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
                           <img alt="" border="0" src="https://www.paypal.com/en_CZ/i/scr/pixel.gif" width="1" height="1" />
                           </form>
                         </div>
+                        <br>
+                        <br>
                         <p>You can use your PayPal account, or your credit card if you don't want to create a PayPal account. All transactions are secured by PayPal, similar to any other online shopping you might do with PayPal. This website is also secured with SHA-2 SSL standard and signed by Let's Encrpyt, the chosen CA for all GitHub repositories (where this website is stored and published).</p>
                   </div>
             </div>
