--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                 <div class="col-xs-12 col-md-8 col-md-offset-2">
                     <h2>Support</h2>
                         <p>There are plenty of ways to support independent working musicians! Even when you can't attend concerts, you can buy our music online, follow us on social media, and share your favorite tunes with your friends. </p>
-                        <p>Since most digital music platform either deduct a fee (i.e Bandcamp) or pay very little for streaming (i.e. Spotify), the best way to make sure the musicians get the maximum amount from your contributions, please use this Donate button to contribute directly:</p>
+                        <p>Since most digital music platforms deduct a fee (i.e Bandcamp) or pay very little for streaming (i.e. Spotify), the best way to make sure the musicians get the maximum amount from your contributions, you can contribute directly with PayPal by clicking this handy button (opens in a new tab):</p>
                         <div>
                           <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" target="_blank">
                           <input type="hidden" name="cmd" value="_s-xclick" />
@@ -269,8 +269,7 @@
                           </form>
                         </div>
                         <br>
-                        <br>
-                        <p>You can use your PayPal account, or your credit card if you don't want to create a PayPal account. All transactions are secured by PayPal, similar to any other online shopping you might do with PayPal. This website is also secured with SHA-2 SSL standard and signed by Let's Encrpyt, the chosen CA for all GitHub repositories (where this website is stored and published).</p>
+                        <p>You can log in to your PayPal account, or simply use your credit card if you don't want to create a PayPal account. All transactions are secured by PayPal, similar to any other online shopping you might do with PayPal. </p>
                   </div>
             </div>
         </div>
@@ -306,6 +305,7 @@
             <p>Header photo courtesy of Martina Houdek Photography</p>
             <p>...</p>
             <p>This website is open-source and published with GitHub Pages based on the awesome open-source theme from <a href="https://startbootstrap.com/template-overviews/grayscale/">Start Bootstrap Grayscale</a></p>
+            <p>SSL Encryption certified by Let's Encrypt, the chosen CA for GitHub Pages.</p>
         </div>
     </footer>
 
