Damn button again

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                         <p>There are plenty of ways to support independent working musicians! Even when you can't attend concerts, you can buy our music online, follow us on social media, and share your favorite tunes with your friends. </p>
                         <p>Since most digital music platforms deduct a fee (i.e Bandcamp) or pay very little for streaming (i.e. Spotify), the best way to make sure the musicians get the maximum amount from your contributions, you can contribute directly with PayPal by clicking this handy button (opens in a new tab):</p>
                         <div>
-                          <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" target="_blank">
+                          <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
                           <input type="hidden" name="cmd" value="_s-xclick" />
                           <input type="hidden" name="hosted_button_id" value="43U8ZKTFEZS6W" />
                           <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
