--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
     <!-- Flickr Section -->
     <section id="photos" class="container-fluid widget-section text-center">
-        <div class="container">
+        <div class="container" align="center">
             <div class="col-lg-12">
                 <h2>Photos</h2>
                 <div class="flickrwrap">
