--- a/index.html
+++ b/index.html
@@ -195,10 +195,10 @@
     <!-- Flickr Section -->
     <section id="photos" class="container-fluid widget-section text-center">
         <div class="container">
-            <div align="center" class="col-xs-12 col-md-8 col-md-offset-2">
+            <div align="center" class="col-xs-12 col-md-8 col-md-offset-3">
                 <h2>Photos</h2>
                 <div class="flickrwrap">
-                     <a data-flickr-embed="true" data-context="true"  href="https://www.flickr.com/photos/missmikeymay/30534245807/in/dateposted-public/" title="DSC_0521"><img src="https://farm2.staticflickr.com/1901/30534245807_1c95197506_z.jpg" width="640" height="428" alt="DSC_0521"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+                     <a data-flickr-embed="true" data-context="true"  href="https://www.flickr.com/photos/missmikeymay/30534245807/in/dateposted-public/" title="DSC_0521"><img src="https://farm2.staticflickr.com/1901/30534245807_1c95197506_z.jpg" width="100%" height="428" alt="DSC_0521"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
                 </div>
                 <div class="row">
                   <!--
