--- a/index.html
+++ b/index.html
@@ -132,13 +132,17 @@
             <div class="container">
                 <div class="col-xs-12 col-md-6 col-md-offset-3">
                     <h2>Music</h2>
-                     <iframe style="border: 0; width: 100%; height: 307px;" src="https://bandcamp.com/EmbeddedPlayer/album=1589255531/size=large/bgcol=ffffff/linkcol=7137dc/artwork=small/transparent=true/" seamless><a href="http://missmikeymay.bandcamp.com/album/thats-that">That&#39;s That by Miss Mikey May and the Organ Grinders</a></iframe>
+                     <iframe src="https://open.spotify.com/embed/album/4dEoWy5IeHxthGVR2SwDkc?si=TO-KQX76S7OdcRmkCJWlGA" width="100%" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
                      <br>
                      <br>
-                     <iframe style="border: 0; width: 100%; height: 472px;" src="https://bandcamp.com/EmbeddedPlayer/album=1574344274/size=large/bgcol=ffffff/linkcol=7137dc/artwork=small/transparent=true/" seamless><a href="http://missmikeymay.bandcamp.com/album/stay-with-it">Stay With It by Miss Mikey May and The Organ Grinders</a></iframe>
+                     <iframe src="https://open.spotify.com/embed/album/7Mi92YbUQVqHPE5KFUnDkh?si=KPOP_RUcS2mvWMLhpftUMQ" width="100%" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
                      <br>
                      <br>
-                    <p>You can also listen to the music on <a href="https://open.spotify.com/artist/36ZvEAnAbW8NOJK7TrBoh5" target=_blank>Spotify</a>!
+                     <iframe src="https://open.spotify.com/embed/album/06ccWNCRHCshWiWHxXZvsV?si=9vuMMqQJRJi9OCS-1lNsFA" width="100%" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                     <br>
+                     <iframe src="https://open.spotify.com/embed/album/2k4dHteQjVR9q5xYJnX1Qd?si=Jz_B_iwdSme3vRGP108Now" width="100%" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                     <br>
+                    <p>You can also purchase the original music on <a href="https://missmikeymay.bandcamp.com/" target=_blank>Bandcamp</a>!
                     </p>
                 </div>
             </div>
@@ -150,10 +154,10 @@
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <h2>About</h2>
-                <p>Israeli-American Blues singer with a minor in Jazz, Mikey's powerful and soulful vocals are inspired by the great Jazz and Blues divas and deliver a double-dose of musicality and emotion that radiate on and off the stage.</p>
+                <p>Israeli-American Blues singer with a minor in Jazz and Soul, Mikey's powerful and soulful vocals are inspired by the great Jazz and Blues divas and deliver a double-dose of musicality and emotion that radiate on and off the stage.</p>
                 <p>Mikey grew up on the stage, singing, acting, and dancing since her school years and well into her twenties. In 2012 she joined the global Swing and Blues dance communities, dancing throughout Europe and absorbing the best Swing and Blues bands from the dance floor. </p>
                 <p>In early 2016 she launched the Organ Grinders project with <a href="http://www.jankorinek.org/" target=_blank>Jan Kořínek</a>, world-class Czech Hammond organ player and band leader. In October 2016, the project released their debut album, 'Swing Out the Blues', featuring dancer-friendly swingin' Blues tributes to classic tunes.</p>
-                <p>The project's second album 'Stay With It' was released in February 2018, and features Mikey's original compositions as well as reinvented Jazz and Blues classics. The album also spans a wider musical ranges, and includes some funk and latin grooves, while still maintaining the danceable groove that you know and love. </p>
+                <p>Since then, the project released several more albums, increasingly featuring Mikey's original compositions alongside tributes to classic songs. Her music can be heard on dance floors all around the world, as well as various internet and broadcast radio stations. </p>
                 <p>When she is not performing with The Organ Grinders, Mikey sings regularly with the Ray Charles Tribute Orchestra led by <a href="http://jakubzomer.com/" target=_blank>Jakub Zomer</a> and with the traditional Jazz band <a href="http://www.appendixie.cz/en/" target=_blank>AppenDixie</a> led by Petr Seghman. </p>
             </div>
         </div>
