--- a/index.html
+++ b/index.html
@@ -132,6 +132,11 @@
             <div class="container">
                 <div class="col-xs-12 col-md-6 col-md-offset-3">
                     <h2>Music</h2>
+                     <br>
+                     <p>Purchase the original music on <a href="https://missmikeymay.bandcamp.com/" target=_blank>Bandcamp</a>!
+                     </p>
+                     <br>
+                     <br> 
                      <iframe src="https://open.spotify.com/embed/album/4dEoWy5IeHxthGVR2SwDkc?si=TO-KQX76S7OdcRmkCJWlGA" width="100%" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
                      <br>
                      <br>
@@ -140,10 +145,9 @@
                      <br>
                      <iframe src="https://open.spotify.com/embed/album/06ccWNCRHCshWiWHxXZvsV?si=9vuMMqQJRJi9OCS-1lNsFA" width="100%" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
                      <br>
+                     <br>
                      <iframe src="https://open.spotify.com/embed/album/2k4dHteQjVR9q5xYJnX1Qd?si=Jz_B_iwdSme3vRGP108Now" width="100%" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
                      <br>
-                    <p>You can also purchase the original music on <a href="https://missmikeymay.bandcamp.com/" target=_blank>Bandcamp</a>!
-                    </p>
                 </div>
             </div>
         </div>
