--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                      </p>
                      <br>
                      <br> 
-                     <iframe src="https://open.spotify.com/embed/album/4dEoWy5IeHxthGVR2SwDkc?si=TO-KQX76S7OdcRmkCJWlGA" width="100%" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                     <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/4nndiG3hUzzAQkHfU2jVnU?utm_source=generator" width="100%" height="380" frameborder="0" allowtransparency="true" allowfullscreen="" allow="clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
                      <br>
                      <br>
                      <iframe src="https://open.spotify.com/embed/album/7Mi92YbUQVqHPE5KFUnDkh?si=KPOP_RUcS2mvWMLhpftUMQ" width="100%" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
