--- a/index.html
+++ b/index.html
@@ -137,17 +137,18 @@
                      </p>
                      <br>
                      <br> 
-                     <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/4nndiG3hUzzAQkHfU2jVnU?utm_source=generator" width="100%" height="380" frameborder="0" allowtransparency="true" allowfullscreen="" allow="clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/4nndiG3hUzzAQkHfU2jVnU?utm_source=generator&theme=0" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
                      <br>
                      <br>
-                     <iframe src="https://open.spotify.com/embed/album/7Mi92YbUQVqHPE5KFUnDkh?si=KPOP_RUcS2mvWMLhpftUMQ" width="100%" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/44Ly2w55Qaw2y2erSMptK2?utm_source=generator&theme=0" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                    <br>                    
+                    <br>
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/6vNYvnmwQxSeAUzi2jlNHT?utm_source=generator&theme=0" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>                     
                      <br>
-                     <br>
-                     <iframe src="https://open.spotify.com/embed/album/06ccWNCRHCshWiWHxXZvsV?si=9vuMMqQJRJi9OCS-1lNsFA" width="100%" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-                     <br>
-                     <br>
-                     <iframe src="https://open.spotify.com/embed/album/2k4dHteQjVR9q5xYJnX1Qd?si=Jz_B_iwdSme3vRGP108Now" width="100%" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-                     <br>
+                    <br>
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/1diizyRtrgcTSQl6SOIfKx?utm_source=generator&theme=0" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>                     
+                    <br>
+                    <br>
                 </div>
             </div>
         </div>
