--- a/index.html
+++ b/index.html
@@ -137,6 +137,9 @@
                      </p>
                      <br>
                      <br> 
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/7hzWreV40b21a9kqxVsyur?utm_source=generator&theme=0" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                     <br>
+                     <br>
 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/4nndiG3hUzzAQkHfU2jVnU?utm_source=generator&theme=0" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
                      <br>
                      <br>
