--- a/index.html
+++ b/index.html
@@ -178,6 +178,10 @@
                 <h2>Videos</h2>
                 <div class="row">
                 <div class="video-container">
+                    <iframe width="640" height="360" src="https://www.youtube.com/embed/bo_czxiXu5o?si=kHBCVAG6PG5lQXSw&amp;start=95" frameborder="0" allowfullscreen></iframe>
+                </div>
+                <br>
+                <div class="video-container">
                     <iframe width="640" height="360" src="https://www.youtube.com/embed/95Uyw8EWVyE?rel=0" frameborder="0" allowfullscreen></iframe>
                 </div>
                 <br>
@@ -187,11 +191,7 @@
                 <br>
                 <div class="video-container">
                     <iframe width="640" height="360" src="https://www.youtube.com/embed/q_0RtdhE_1U?rel=0" frameborder="0" allowfullscreen></iframe>
-                </div>
-                <br>
-                <div class="video-container">
-                    <iframe width="640" height="360" src="https://www.youtube.com/embed/gyTgksBmpt4?rel=0" frameborder="0" allowfullscreen></iframe>
-                </div>
+                </div>          
                 <br>
                 <div class="video-container">
                     <iframe width="640" height="360" src="https://www.youtube.com/embed/szL6Ulq1XCo?rel=0" frameborder="0" allowfullscreen></iframe>
@@ -249,7 +249,7 @@
     </section>
 
 
-    <!-- Shows Section -->
+    <!-- Shows Section 
     <section id="shows" class="container-fluid widget-section text-center">
         <div class="widget-section">
             <div class="container">
@@ -260,7 +260,8 @@
             </div>
         </div>
     </section>
-
+    -->
+    
     <!-- Support Section -->
     <section id="support" class="container-fluid widget-section text-center">
         <div class="widget-section">
